[gd_scene load_steps=2 format=3 uid="uid://baeaupuflq58j"]

[ext_resource type="Script" path="res://scripts/flow_node.gd" id="1_n4k3d"]

[node name="FlowNode" type="GraphNode"]
offset_right = 120.0
offset_bottom = 60.0
title = "节点"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_n4k3d")

[node name="MainContent" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MainContent"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputContainer" type="VBoxContainer" parent="MainContent"]
layout_mode = 2

[node name="VarNameInput" type="LineEdit" parent="MainContent/InputContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "变量名"
expand_to_text_length = true

[node name="ValueInput" type="LineEdit" parent="MainContent/InputContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "值"
expand_to_text_length = true

[node name="TrueBranch" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="TrueBranch"]
layout_mode = 2
size_flags_horizontal = 3
text = "True"
horizontal_alignment = 1

[node name="FalseBranch" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FalseBranch"]
layout_mode = 2
size_flags_horizontal = 3
text = "False"
horizontal_alignment = 1
